@@ -3,6 +3,7 @@ package roomescape.service;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import roomescape.domain.Member;
@@ -108,6 +109,6 @@ public class ReservationService {
         return reservationRepository.findByMember(member)
                 .stream()
                 .map(ReservationsMineResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
